--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 .heading {
-    width: 100%;
     display: flex;
+    width: 100%;
 }
 
 h1 {
@@ -14,5 +14,32 @@ h1 {
     letter-spacing: 0.4;
     margin: 40px auto;
     text-align: center;
+}
+
+ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 0 100px;
+}
+
+
+.card {
+    align-items: center;
+    background-color: #a7e9af;
+    border: solid 1px #99CEA8;
+    display: flex;
+    height: 146px;
+    justify-content: center;
+    margin: 34px 34px;
+    width: 117px;
+}
+
+@media(max-width: 614px) {
+    ul {
+        margin: 0 auto;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
